- fix icon design in donation-start component - switch flex direction to column on mobile - icon title break on white space and '/'

--- a/src/app/campaign-details/campaign-details.component.scss
+++ b/src/app/campaign-details/campaign-details.component.scss
@@ -129,17 +129,35 @@ h1 {
 .icons {
   display: flex;
   flex-wrap: nowrap;
+  flex-direction: column;
+
+  // align icon text column on small devices
+  .icon-wrapper:last-child span {
+    padding-left: 0;
+  }
+
+  @media#{$breakpoint-md} {
+    flex-direction: row;
+
+    .icon-wrapper:last-child span {
+      padding-left: 10px;
+    }
+
+    .icon-wrapper:first-child {
+      padding-left: 0;
+    }
+  }
 }
 
 .icon-wrapper {
   display: flex;
-  padding: 10px;
+  padding: 20px;
+  align-items: center;
 
   svg {
     margin-right: 5px;
     color: $colour-primary;
-    width: 40px;
-    height: 40px;
+    font-size: 40px;
   }
 
   .c-icon-title {
